# 00-cookiecutter-data-science

./: cookiecutter.json
{{cookiecutter.project_name}}/: README.md  pyproject.toml
