[tool.poetry]
name = "{{ cookiecutter.project_name }}"
version = "0.1.0"
description = "{{ cookiecutter.project_description }}"
authors = ["{{ cookiecutter.author_name }} <{{ cookiecutter.email }}>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.3"
numpy = "^1.21"
scikit-learn = "^0.24"
jupyter = "^1.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
